update redirect link

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <script>
     function jawab() {
       alert("Selamat! Jawaban kamu benar 🎉");
-      window.location.href = "https://link-situs-judi-utama.com";
+      window.location.href = "https://filagame.com/";
     }
   </script>
 
